# quoty-insight

./: .gitignore  Cargo.toml  Dockerfile  Makefile
.github/workflows/: docker.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20240621_142639_create_quote_tables.rs
src/: db.rs  main.rs  quote_server.rs
src/entities/: mod.rs  prelude.rs  quote_price.rs  quote_sub.rs  quote_trade.rs
