[package]
name = "quoty-insight"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }

longbridge = { version = "0.2.77" }
dotenv = "0.15.0"
tracing = "0.1.40"
sea-orm = { version = "^0.12.15", features = ["serde_json", "runtime-tokio-native-tls", "macros", "sqlx-sqlite", "sqlx-postgres", "sqlx-mysql"] }

[dev-dependencies]
sea-orm-cli = { version = "1.0.0-rc.6" }